--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/sp-core-library": "^1.17.3",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.2",
     "axios": "^1.4.0",
