--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/latinize": "^0.2.18",
+    "@types/react-highlight-words": "^0.16.7",
     "antd": "5.14.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "immer": "^10.0.2",
     "jodit": "^4.0.0-beta.86",
     "jwt-decode": "3.1.2",
+    "latinize": "^2.0.0",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^4.9.0",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.0.7",
