--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/latinize": "^0.2.18",
     "@types/react-highlight-words": "^0.16.7",
-    "antd": "5.14.0",
+    "antd": "^5.16.2",
     "axios": "^1.4.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.10",
     "html-react-parser": "^5.1.10",
     "immer": "^10.0.2",
     "jodit": "^4.0.0-beta.86",
