--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "recharts": "^3.5.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
