--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@shelex/cypress-allure-plugin": "^2.41.2",
     "cypress": "^14.5.4",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-postgresql": "^1.0.8",
     "dotenv": "^17.2.3"
+  },
+  "dependencies": {
+    "axios": "^1.13.2"
   }
 }
